# data-engineering-on-gcp

./: .gitignore
01-introduction-to-data-engineering/: extract.py  fetch.sh  load.sh
02-building-a-data-warehouse-with-bigquery/: bigquery_job_config.py  main.py  pyproject.toml
03-setting-up-data-lake-using-google-cloud-storage/: main.py  pyproject.toml
04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/: breakfast_product_pipeline.py  breakfast_store_pipeline.py  breakfast_transaction_model_training.py  breakfast_transaction_pipeline.py  dog_api_pipeline.py  ga_transaction_model_training.py  my_first_dag.py  my_second_dag.py
04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/breakfast_task/: all_task.py  load_data_to_gcs_then_bigquery.py  raw_sql.py
helpers/: local.conf
my-project/: pyproject.toml
my-streamlit-app/: main.py  pyproject.toml
proj-sales-prediction/: bigquery_job_config.py  load_data_to_gcs_then_bigquery.py  main.py  pyproject.toml
proj-sales-prediction/utils/: convert_to_date.py  product_size_normalization.py
proj-titanic-survivor-prediction/: import.py  pyproject.toml  streamlit_app.py
proj-titanic-survivor-prediction/airflow/mnt/dags/: titanic_from_mysql_to_bigquery_pipeline.py  titanic_survivor_predictor_modeling.py
proj-titanic-survivor-prediction/airflow/mnt/dags/titanic_task/: all.py  load_from_gcs_to_bigquery.py  load_to_gcs.py
